# Projet_SC-master

./: .coverage  README.md  exemple.ipynb  pyproject.toml
Final/: __main__.py  contraintes.py  graphe.py  solution.py
tests/: test_contraintes.py  test_graphe.py  test_solution.py
