[tool.poetry]
name = "projet-sujet-10"
version = "0.1.0"
description = "Projet Supply chain"
authors = ["Basma GHAFFOUR & Cyprien DE CLERCQ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
networkx = "^3.1"
pytest = "^7.3.1"
typer = "^0.7.0"
typing = ">=3.7,<3.10"
sympy = "^1.11.1"
networkx-stubs = "^0.0.1"
pytest-cov = "^4.0.0"
ipykernel = "^6.22.0"
pyserde = "^0.10.4"
serde = {extras = ["json"], version = "^0.9.0"}
rich = "^13.3.5"
autopep8 = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


